--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
       <h3 class="quote"><b>“Sam has the necessary empathy and tech experience to help any startup guy out of a dating rut.”</b></h3>
       <h3 class="attr"><b>~ Zach, Ruby Developer</b></h3>
       <h3 class="quote"><b>“Sam is approachable and easy to talk to; her humor and candid nature make her a great teacher.”</b></h3>
-      <h3 class="attr"><b>~ Patrick, Matlab enthusiast</b></h3>
+      <h3 class="attr"><b>~ Pat, Matlab enthusiast</b></h3>
       <h1 class="red"><a href="mailto:techdategirl@gmail.com">Interested? Drop me a line.</a></h1>
     </section>
   </body>
