changed email line

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
       <h3 class="attr"><b>~ Zach, Ruby Developer</b></h3>
       <h3 class="quote"><b>“Sam is approachable and easy to talk to; her humor and candid nature make her a great teacher.”</b></h3>
       <h3 class="attr"><b>~ Pat, Matlab enthusiast</b></h3>
-      <h1 class="red"><a href="mailto:techdategirl@gmail.com">Interested? Drop me a line.</a></h1>
+      <h1 class="red">Interested? <a href="mailto:techdategirl@gmail.com">Drop me a line.</a></h1>
     </section>
   </body>
 </html>
