made link open in new window

--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
       <h3 class="attr"><b>~ Pat, Matlab enthusiast</b></h3>
       <h1 class="red">Interested? <a href="mailto:techdategirl@gmail.com">Drop me a line.</a></h1>
     </section>
-    <footer><a href="http://www.samanthafeldman.me">Who made this?</a>
+    <footer><a href="http://www.samanthafeldman.me" target="_blank">Who made this?</a>
     </footer>
   </body>
 </html>
